--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=searchlight_cyber_tech_test
 DB_USERNAME=root
@@ -26,7 +26,7 @@ MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
-REDIS_PORT=6379
+REDIS_PORT=6380
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
