implement book search functionality and replace header component

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "axios": "=1.3.4",
         "laravel-mix": "^6.0.49",
         "laravel-mix-purgecss": "^6.0.0",
+        "sweetalert2": "^11.14.5",
         "vue": "^2.6.12"
     }
 }
